# Dragon2

./: CMakeLists.txt  LICENSE  README.md  __sm100_CMakeLists.txt__  __sm100_dealLoc_CMakeLists.txt__  becker_convergence.csv
cases/: capsule-2d.cfg  capsule-2d.msh  capsule-2d.prm  capsule-3d.cfg  capsule-3d.msh  capsule-3d.prm  cylinder-2d.cfg  cylinder-2d.prm  cylinder-3d.cfg  cylinder-3d.prm  oat15a-2d.cfg  oat15a-2d.prm  sphere-channel-3d.cfg  sphere-channel-3d.msh  sphere-channel-3d.prm
docs/: USER_MANUAL.md  keep_Ne_pas_mettre_GH_TEST_CASES.md
meshes/: oat15a-2d-coarse_grid.msh
src/: atomic_operations.cuh  boundary_conditions.cuh  boundary_conditions_dynamic.cuh  cell_based_operator.cuh  configuration.h  cuda_time_loop.cu  data_struct.cuh  hyperbolic_kernels.cu  indicator.cuh  initial_condition.h  internal_energy_solver.cuh  limiter.cuh  main.cpp  mesh.h  mesh_reader.h  offline_data.h  output.h  parabolic_kernels.cuh  parabolic_solver.cuh  phy_func.cuh  riemann_solver.cuh  velocity_solver.cuh
test_cases/: ns-mach3-cylinder-2d.prm  ns-mach3-cylinder-3d.prm  ns-mach3-sphere-3d.prm  ns-oat15a-2d.prm
